# deep-research-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-edit.sh
.github/workflows/: ci.yml
deep_research/: __init__.py  __main__.py  agent.py  cli.py  config.py  graph.py  subagents.py  tools.py
evals/: __init__.py  __main__.py  dataset.py  evaluators.py  harness.py
tests/: conftest.py  test_agent_wiring.py  test_cli_hitl.py  test_cli_parsing.py  test_config.py  test_evals.py  test_live.py
