[project]
name = "deep-research-agent"
version = "0.1.0"
description = "A persistent, subagent-orchestrating research agent built on Deep Agents (LangChain + LangGraph)."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # Deep Agents harness (bundles langgraph transitively)
    "deepagents",
    # LangChain 1.0 LTS core + framework
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    # Anthropic provider (Claude models)
    "langchain-anthropic",
    # Web search tool for research (dedicated partner package)
    "langchain-tavily",
    # Orchestration runtime + disk-backed checkpointer for HITL/persistence
    "langgraph>=1.0,<2.0",
    "langgraph-checkpoint-sqlite",
    # Observability
    "langsmith>=0.3.0",
    # Load .env into the environment
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff",
    "ty>=0.0.58",
]

# The distribution name (deep-research-agent) differs from the import package
# (deep_research), so point hatchling at the right directory for the wheel.
[tool.hatch.build.targets.wheel]
packages = ["deep_research"]

[tool.pytest.ini_options]
# `deep_research` imports without a sys.path shim because the project itself is
# installed (editable) into the venv by `uv sync`.
testpaths = ["tests"]
# `live` tests hit real Anthropic/Tavily APIs — opt in with `pytest -m live`.
addopts = "-m 'not live'"
markers = [
    "live: exercises real external APIs (needs keys + network); deselected by default",
]
