[project]
name = "deep-research-agent"
version = "0.1.0"
description = "A persistent, subagent-orchestrating research agent built on Deep Agents (LangChain + LangGraph)."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # Deep Agents harness (bundles langgraph transitively).
    # Capped at the MINOR: deepagents is 0.x, so a minor bump is its breaking
    # boundary, and 0.7.0 is a known break — it removes the `runtime` argument to
    # StateBackend/StoreBackend and the callable-factory form of `backend=`, both
    # of which `agent.py` used to rely on. Everything else here is capped at the
    # major, matching the LangChain 1.0 LTS line.
    "deepagents>=0.6.12,<0.7",
    # LangChain 1.0 LTS core + framework
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    # Anthropic provider (Claude models)
    "langchain-anthropic>=1.0,<2.0",
    # Web search tool for research (dedicated partner package)
    "langchain-tavily>=0.2,<1.0",
    # Orchestration runtime + disk-backed checkpointer for HITL/persistence
    "langgraph>=1.0,<2.0",
    "langgraph-checkpoint-sqlite>=3.0,<4.0",
    # Observability
    "langsmith>=0.3,<1.0",
    # Load .env into the environment
    "python-dotenv>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff",
    "ty>=0.0.58",
]

# The distribution name (deep-research-agent) differs from the import package
# (deep_research), so point hatchling at the right directory for the wheel.
# `evals` rides along not because it belongs in the wheel — nothing imports it at
# runtime — but because the editable install is what puts it on `sys.path`, and
# without that neither `python -m evals` nor `tests/test_evals.py` can import it.
[tool.hatch.build.targets.wheel]
packages = ["deep_research", "evals"]

[tool.ruff.lint]
# Ruff's defaults are only E4/E7/E9 + F. Widen to catch import order (I),
# outdated idioms (UP), likely bugs (B), needless complexity (SIM), dead `noqa`
# directives (RUF100), and blind excepts (BLE) — the last of these is what makes
# the deliberate suppression in `cli.py` an enforced decision rather than a
# decorative comment. `target-version` is inferred from `requires-python`.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "BLE"]
# The formatter owns line length; E501 would only ever fire on prose it won't rewrap.
ignore = ["E501"]

[tool.pytest.ini_options]
# `deep_research` imports without a sys.path shim because the project itself is
# installed (editable) into the venv by `uv sync`.
testpaths = ["tests"]
# `live` tests hit real Anthropic/Tavily APIs — opt in with `pytest -m live`.
addopts = "-m 'not live'"
markers = [
    "live: exercises real external APIs (needs keys + network); deselected by default",
]
